--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -15,7 +15,7 @@ firebase-admin>=6.0.1
 python-dotenv==1.0.0
 
 # HTTP & Requests
-requests==2.28.1
+requests>=2.31.0
 
 # Security & Encryption
 bcrypt==4.0.1
