security: fix 17 Trivy vulnerabilities
- Move FIREBASE_CREDENTIALS and HIPAA_ENCRYPTION_KEY to GitHub Secrets (#26)
- Upgrade Werkzeug 3.0.1 -> >=3.1.3 (fixes #12-#16, #20-#24)
- Upgrade axios 1.6.2 -> 1.7.8 (fixes #25 DoS via __proto__)
- Upgrade react-router-dom 6.20.1 -> 6.28.0 (fixes #17 XSS)
- Upgrade firebase 10.7.1 -> 12.9.0 (fixes #10,#11,#19 undici)
- Add .trivyignore to prevent duplicate Backend alerts in frontend scan
- Remaining 6 moderate: dev-only esbuild/vite chain (requires Vite 7 breaking change)

--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -73,6 +73,7 @@ jobs:
           scan-ref: '.'
           format: 'sarif'
           output: 'trivy-frontend.sarif'
+          trivyignores: '.trivyignore'
 
       - name: Upload Trivy results
         uses: github/codeql-action/upload-sarif@v4
