fix: resolve Dependabot alerts - npm audit fix + undici override
- npm audit fix: updated lodash, lodash-es, js-yaml to patched versions
- Added npm overrides for undici@^7.21.0 to fix 3 CVEs in firebase's
  transitive dependency chain (GHSA-c76h, GHSA-g9mf, GHSA-cxrh)
- Remaining 6 moderate alerts are esbuild in vite/vitest (dev-only,
  not shipped to production, requires vite 7 major upgrade to fix)

--- a/package.json
+++ b/package.json
@@ -87,5 +87,8 @@
     "vite-plugin-pwa": "^1.1.0",
     "vitest": "^1.0.4",
     "workbox-window": "^7.3.0"
+  },
+  "overrides": {
+    "undici": "^7.21.0"
   }
 }
